Se agrego modificacion en body bienvenido

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="welcome-message">Hola, bienvenido</h1>
+        <h1 id="welcome-message">Hola, que tal, bienvenido</h1>
     </div>
 
     <script src="script.js"></script>
